--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -90,6 +90,7 @@ video {
   font-size: 100%;
   font: inherit;
   vertical-align: baseline;
+  color: #282828;
 }
 /* HTML5 display-role reset for older browsers */
 article,
@@ -156,10 +157,10 @@ html {
       display: flex;
       align-items: center;
       justify-content: space-between;
-      margin: 2.4rem 0 0;
+      margin: 2.3rem 0 1.7rem 0;
 
       @media only screen and (min-width: 376px) {
-        margin: 3.8rem 0 0.015rem 0;
+        margin: 3rem 0 2.3rem 0;
       }
 
       .logo-side {
@@ -606,6 +607,234 @@ html {
                 }
               }
             }
+          }
+        }
+      }
+    }
+
+    .herconomy-section {
+      .product-banner {
+        display: flex;
+        height: 68.5rem;
+
+        .left-side {
+          width: 57%;
+          background-image: url("/assets/images/hand.png");
+          background-repeat: no-repeat;
+          background-size: cover;
+          height: 100%;
+          position: relative;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          flex-direction: column;
+
+          &::before {
+            position: absolute;
+            content: "";
+            top: 0;
+            left: 0;
+            background-color: rgba(#282828, 0.9);
+            width: 100%;
+            height: 100%;
+          }
+
+          .text-content {
+            position: relative;
+
+            h3 {
+              font-weight: 700;
+              font-size: 6.6rem;
+              line-height: 8rem;
+              color: #ffffff;
+            }
+
+            p {
+              font-weight: 500;
+              font-size: 4rem;
+              line-height: 4.8rem;
+              color: #ffffff;
+            }
+          }
+        }
+
+        .right-side {
+          width: 43%;
+          height: 100%;
+          background-image: url("/assets/images/iphone-in-hand.png");
+          background-repeat: no-repeat;
+          background-size: cover;
+        }
+      }
+    }
+
+    .product-intro {
+      .container {
+        .product-intro-content {
+          display: flex;
+          padding: 5.7rem 0;
+          gap: 3.4rem;
+
+          .text-content {
+            h3 {
+              font-weight: 700;
+              font-size: 6rem;
+              line-height: 8rem;
+              margin-bottom: 1.6rem;
+
+              > span {
+                color: #a4a5a6;
+              }
+            }
+
+            p {
+              font-weight: 500;
+              font-size: 2.84rem;
+              line-height: 130.02%;
+            }
+          }
+
+          .image-wrapper {
+            margin-top: 10rem;
+            overflow: hidden;
+
+            img {
+              width: 100%;
+              height: 97.8rem;
+            }
+          }
+
+          > div {
+            flex-grow: 1;
+            flex-basis: 0;
+          }
+        }
+
+        .product-persona {
+          .title {
+            text-align: center;
+            font-weight: 700;
+            font-size: 6.6rem;
+            line-height: 8rem;
+            margin-bottom: 1.6rem;
+          }
+
+          .description {
+            max-width: 78.6rem;
+            margin: auto;
+            font-weight: 500;
+            font-size: 2.84rem;
+            line-height: 130.02%;
+            text-align: center;
+          }
+
+          .persona-items-wrapper {
+            display: flex;
+            gap: 2.5rem;
+            margin-top: 3rem;
+
+            > div {
+              flex-grow: 1;
+              flex-basis: 0;
+
+              &.persona-item {
+                background: #282828;
+                border-radius: 1rem;
+                padding: 3.4rem 1.7rem 5.4rem 1.7rem;
+
+                > .image-wrapper {
+                  width: 16rem;
+                  height: 16rem;
+                  margin: 0 auto 1.6rem auto;
+
+                  img {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                  }
+                }
+
+                > .name {
+                  text-align: center;
+                  font-weight: 700;
+                  font-size: 2.84rem;
+                  line-height: 130.02%;
+                  margin-bottom: 1.6rem;
+                  color: #ffffff;
+                }
+
+                > .detail {
+                  background: rgba(#d9d9d9, 0.1);
+                  border-radius: 0.4rem;
+                  padding: 1rem 1.4rem;
+                  font-size: 14px;
+                  line-height: 130.02%;
+                  color: rgba(255, 255, 255, 0.7);
+                  max-width: 43.9rem;
+                  margin: auto;
+
+                  > span {
+                    font-weight: 700;
+                    color: rgba(255, 255, 255, 0.7);
+                    margin-left: 1.6rem;
+                  }
+                }
+
+                > .info {
+                  font-size: 1.8rem;
+                  line-height: 130.02%;
+                  text-align: center;
+                  color: rgba(255, 255, 255, 0.7);
+                  height: 18.6rem;
+                  margin: 5.3rem 0 0.7rem 0;
+                }
+
+                > .fandf {
+                  > .ul-title {
+                    font-weight: 700;
+                    font-size: 1.8rem;
+                    line-height: 130.02%;
+                    color: #ffffff;
+                    margin-bottom: 1rem;
+                  }
+
+                  > ul {
+                    li {
+                      position: relative;
+
+                      &::before {
+                        content: '';
+                        position: absolute;
+                        top: 1em;
+                        left: 0;
+                        width: 0.5em;
+                        height: 0.5em;
+                        border-radius: 50%;
+                        background-color: rgba(255, 255, 255, 0.7);
+                      }
+
+                      > span {
+                        display: flex;
+                        flex-direction: row;
+                        align-items: center;
+                        font-size: 1.8rem;
+                        line-height: 130.02%;
+                        color: rgba(255, 255, 255, 0.7);
+                        margin-left: 1.8em;
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+
+        .product-wireframes {
+          margin-top: 5.8rem;
+
+          .description {
+            max-width: 75.9rem;
           }
         }
       }
