--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -92,6 +92,7 @@ video {
   vertical-align: baseline;
   color: #282828;
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 /* HTML5 display-role reset for older browsers */
 article,
@@ -165,7 +166,9 @@ html {
       }
 
       .logo-side {
-        p {
+        > a {
+          text-decoration: none;
+          display: block;
           font-size: 1.75rem;
           color: #ffffff;
         }
@@ -245,7 +248,8 @@ html {
 
       &.color-black {
         .logo-side {
-          p {
+          > a {
+            text-decoration: none;
             color: #000000;
           }
         }
@@ -407,6 +411,9 @@ html {
               width: 100%;
               height: 28.2rem;
               background-color: #d9d9d9;
+              background-image: url("/assets/images/iphone-in-hand.png");
+              background-repeat: no-repeat;
+              background-size: cover;
 
               @media only screen and (min-width: 376px) {
                 width: 47.3rem;
@@ -423,6 +430,14 @@ html {
 
                 @media only screen and (min-width: 376px) {
                   font-size: 7.34rem;
+                }
+
+                a {
+                  text-decoration: none;
+
+                  &:hover {
+                    text-decoration: underline;
+                  }
                 }
               }
 
